day 6 part 2 refactor